# batterymonitordisplay

./: license.md  platformio.ini  readme.md  readme_de.md
SquareLine/: Lcars.sll  Lcars.spj
SquareLine/assets/: ui_font_Top.fcfg  ui_font_battery.c  ui_font_battery.fcfg  ui_font_button.fcfg  ui_font_labelAmp.fcfg  ui_font_sidebar.c  ui_font_sidebar.fcfg
UI/: CMakeLists.txt  filelist.txt  ui.c  ui_comp_hook.c  ui_font_labelAmp.c  ui_helpers.c  ui_helpers.h  ui_img_blitz_png.c  ui_img_charge_trans_png.c
lib/: lv_conf.h
src/: main.cpp  ui.h  ui_Screen1.c  ui_events.h  ui_font_Top.c  ui_font_button.c  ui_img_batterie_bg_png.c  ui_img_charge_png.c  ui_img_indicator_bg_png.c
